# event-driven-framework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  mini_reactor  win_event_work.sln
src/: Buffer.h  linux_loop.h  loop.h  message.h  sbuffer.h  slog.cc  slog.h  socket_buffer.h  watcher.cc  watcher.h  win_loop.h
win_event_work/: main.cpp  win_event_work.vcxproj  win_event_work.vcxproj.filters
win_event_work/src/: mac_loop.h  sbuffer.h  slog.cc  slog.h  watcher.cc  watcher.h  win_loop.cpp
